monitoring/controllers/staging/kube-prometheus-stack/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
spec:
  type: ClusterIP
  selector:
    app: kube-prometheus-stack-grafana
  ports:
    - port: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: grafana.noodoodle.us
      http:
        paths:
          - backend:
              service:
                name: grafana-svc
                port:
                  number: 3000
            path: /
            pathType: Prefix
